analogue Change Log

Version 0.11-1

	* scores.prcurve: new function to extract "axis" scores for
	samples on the fitted principal curve.

	* lines.prcurve: new lower-level plotting function allows
	a fitted principal curve to be added to an existing PCA
	plot.

	* gradientDist: the "prcurve" method was ordering the samples
	such that they were smooth. No need for the `order` argument
	now either.

	* Namespace: simplified the import from lattice. Added more
	imports from grid as this package no-longer in Dependencies.

	* Dependencies: grid moved to Imports:

Version 0.11-0

	* timetrack: fitted method gains argument `choices` with
	default `1:2` for extracting the ordinary or passive
	samples scores on `choices` axes. `plot` method can now draw
	the passive samples as a line, points or both. The `plot`
	method also gains an argument `order` that can be used to
	reorder the passive samples into correct temporal ordering.

	* Dependencies: MASS and mgcv moved from Depends: to Imports:
	reflecting the relatively light use of functions from these
	packages in analogue. The functions needed are imported in
	analogue's NAMESPACE file.

	* Tests: code in wa() generates slightly different results
	under R 3.0.0 (to be). Differences are in the 8th or 9th
	decimal place so irrelevant, but I was the reference output
	for the examples was checking to that level of precision.
	For tests only, the Example in ?wa uses options(digits = 5).

Version 0.10-0

	* Release: Version 0.9-11 plus a minor documentation fix
	was released to CRAN 2 Jan 2013.

Version 0.9-11

	* Was loading compiled code both via the package namespace
	and a .onAttach() call. The latter was removed. Reported by
	Kurt Hornik.

Version 0.9-10

	* stdError: Several changes and enhancements:

	Calculation assumed weights summed to 1. New formula as
	described in Simpson (2012) is now used. (Reported by Steve
	Juggins)

	Now have a choice whether to use the weighted SD or not. For